--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,10 +77,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: QR
-      fonts:
-        - asset: assets\fonts\QuanRounded-Regular.ttf
+  # fonts:
+  #   - family: QR
+  #     fonts:
+  #       - asset: assets\fonts\QuanRounded-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
